Fixed spacing for <pre> ... but now unhappy with whitespace at the end of <div.highlight> (which is encased in <pre>)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -426,9 +426,12 @@ pre code {
 	display: block;
 	overflow: auto;
 	line-height: 150%;
-	padding: 0 10px;
+	padding: 10px 10px;
 	margin-top: 10px;
 	margin-bottom: 15px;
+}
+
+div.highlight{
 	white-space: normal;
 }
 
